--- a/Css/styles.css
+++ b/Css/styles.css
@@ -2,7 +2,7 @@
 
 @font-face{
     font-family: 'Playfair';
-    src: url('../assets/font/Freeman-Regular.ttf');
+    src: url('../assets/font/LobsterTwo-Bold\ 1.ttf');
 }
 
 * {
@@ -28,19 +28,27 @@ header img {
 /* ? -------------------------------------------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------Contenido Principal ----------------------------------------------------------------- */
 /* !--------------- Card------------- */
-    .card{
-    width: 18rem;
+#marvel {
+    display: grid;
+    grid-template-columns: repeat(4, 18rem);
     text-align: center;
-    border: 0.8rem solid white;
-    border-radius: 15%;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+}    
+
+.card{
+    width: 14rem;
+    text-align: center;
+    justify-content: center;
+    border: 0.5rem solid white;
+    border-radius: 20%;
     background-color: #f27272;
     transition: opacity 0.5s ease;
     opacity: 1;
     }
 
     .card:hover {
-        cursor: pointer;
-        opacity: 0.8;
         color: black;
     }
 
@@ -51,6 +59,32 @@ header img {
     .card__detail {
         border-radius: 5%;
         border: 0.8rem solid white;
+    }
+
+    .card__img{
+        justify-content: center;
+        border-radius: 70%;
+        border-color: #000000;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
+    .boton {
+        font-family: 'Playfair';
+        src: url('../assets/font/LobsterTwo-Bold\ 1.ttf');
+        display: inline-block; /* Hace que los botones se muestren en línea */
+        margin: 5px; /* Espacio entre botones */
+        padding: 10px 20px; /* Padding interior del botón */
+        background-color:  #da5a75; /* Color de fondo del botón */
+        color: #000000; /* Color del texto del botón */
+        border: 2px solid cornsilk; /* Bordes de los botones */
+        border-radius: 5px; /* Añade bordes redondeados al botón */
+    }
+
+    .boton:hover{
+        cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+        opacity: 0.25;
+        background-color: rgb(255, 255, 255);
     }
 /* !--------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------------------------------- */
@@ -65,9 +99,30 @@ footer {
 /* TODO: ------------------------------------------------------ Pie de Página ---------------------------------------------------------- */
 /* ? ------------------------------------------------- Final -------------------------------------------------------------------------- */
 
-.marvel__inicio{
-    background-color: #49555E;
+.marvel__final{
+    justify-content: center;
+    align-items: center;
 }
+
+/* --- Botones de paginar -------- */
+.pagination{
+    text-align: center;
+    font-size: 3rem;
+}
+
+.pagination__item {
+    margin: 1rem;
+    color: pink;
+    opacity: 0.5;
+    transition: opacity 0.3 ease;
+}
+.pagination__item:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+/* ------------------------------- */
+
 /* ? -------------------------------------------------------------------------------------------------------------------------------- */
 /* ----------------------------------------------------------------------- Media Queries ----------------------------------*/
 @media (width <= 320px) {
@@ -76,7 +131,7 @@ footer {
     }
 }
 
-@media (width >= 768px) {
+@media (width >= 510px) {
     #marvel {
     grid-template-columns: repeat(2, 15rem);
     }
