--- a/Css/styles.css
+++ b/Css/styles.css
@@ -86,6 +86,11 @@ header img {
         opacity: 0.25;
         background-color: rgb(255, 255, 255);
     }
+
+    .card__detail {
+        border-radius: 5%;
+        border: 0.8rem solid white;
+    }
 /* !--------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------------------------------- */
 /* TODO: ------------------------------------------------------ Pie de Página ---------------------------------------------------------- */
@@ -112,7 +117,7 @@ footer {
 
 .pagination__item {
     margin: 1rem;
-    color: pink;
+    color: #ffc0cb;
     opacity: 0.5;
     transition: opacity 0.3 ease;
 }
